fixed spacing on product table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -315,3 +315,24 @@ main.root {
     border-bottom: black 5px double;
     margin-bottom: 2em
 }
+
+#product-row-1 {
+    width: 25%
+}
+
+#product-row-2 {
+    width: 20%
+}
+
+#product-row-3 {
+    width: 20%
+}
+
+#product-row-4 {
+    width: 20%
+}
+
+#product-row-5 {
+    width: 30%
+}
+
